feat: add metadata module in trace-etl (#370)
* fix: delete unused annotation

* fix: upgrade app-api and app-common version to 3

* feat: add meta data module in trace-etl

* fix: fix metadata README

* fix: change the comment to English