@@ -29,7 +29,6 @@ to Nacos for Prometheus-agent to pull.
 
 Execute in the root directory of the project (trace-etl):
 
-`mvn clean install -U -P opensource -DskipTests`
 `mvn clean compile -P opensource-outer -Dmaven.test.skip=true`
 
 It will generate a target directory under the trace-etl-server module, and the trace-etl-server-1.0.0-SNAPSHOT.jar in
@@ -39,13 +38,12 @@ the target directory is the executable jar file.
 
 Execution:
 
-`java -jar trace-etl-server-1.0.0-SNAPSHOT.jar`
+`java -jar trace-etl-server-1.0.1-SNAPSHOT.jar`
 
 You can run trace-etl-server.
 
 ## JVM startup parameters
 --add-opens java.base/java.util=ALL-UNNAMED
---add-opens java.base/java.lang=ALL-UNNAMED
 
 ## Suggestion
 We also recommend that you use zgc when starting. XX:+UseZGC
